--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.06.2022 08:49:31</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.06.2022 09:10:54</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -107,7 +107,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Pečený filet z atlantického hejka, zeleninový kuskus, citronovo hořčične pesto s koprem, salátek{L} 149</li><li>Pečený filet z čerstvého mořského vlka, bramborový salát s okurkami, kedlubnami, zelenými bylinkami a majonézou, citronovo hořčične pesto s koprem{L} 175</li><li>Krůtí medailonky v citronové omáčce po jihoindicku se zázvorem kokosovým mlékem, jasmínová rýže, salátek 149</li><li>Smažené řízečky z panenské svíčkové,  bramborový salát s okurkami, kedlubnami, zelenými bylinkami a majonézou, citron, salátek 175</li><li>Zapečené cukety plněné červenou čočkou s červenou řepou, jogurtový dip, salátek {L} 149</li></ol>
+<ol><li>Peceny filet z cerstveho morskeho dasa s pestem ze susenych rajcat, cizrnovy salat s paprikou, zeleninou a zelenymi bylinkami  149</li><li>Peceny filet z atlanticke makrely s pestem ze susenych rajcat, cizrnovy salat s paprikou, zeleninou a zelenymi bylinkami 179</li><li>Pad kra pao – thajske restovane veprove s cuketami, bazalkou, chilli a sazenym vejcem, jasminova ryze, salatek 149</li><li>Spagety s prsicky lesniho holuba a koroptve, jalapenos, rimskym salatem a zralou goudou {L} 179</li><li>Smazeny zampionovy rizek s listovym spenatem a goudou, bramborovy salat s cervenou repou, zelenou cibulkou a majonezou {L} 149</li></ol>
 </td>
 </tr>
 </table>
