--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.06.2022 12:42:10</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.06.2022 13:11:03</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -97,6 +97,39 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="title">Gin Tonic Okurkový<br/>
+gin / tonic / čerstvá okurka / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic PINK<br/>
+malinový gin / tonic  / lesní plody / ovoce / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Zázvorový / Ginger<br/>
+gin / zázvorový tonic / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Targa Florio<br/>
+gin / citronová limonáda / citron / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+<tr>
+<td class="title">Gin Tonic Pomerančový / Orange<br/>
+pomerančový gin / tonic / pomeranč / led</td>
+<td class="pricem">109 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr>
 <td>
 <table class="dm"><tr><td class="amount">0,33l</td><td class="title">Dršťková polévka z hlívy ústřičné 1a</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Gratinovaný kuřecí steak sýrovou krustou s lyonskými brambory a trhanými saláty 1a,3,7,10</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Špikovaná hovězí pečeně po cikánsku s rajčaty a paprikami s jasmínovou rýží 1a</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety pomodoro s pancettou, sýrem Forte Classico a rukolovými listy 1a,3,7</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
