--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.06.2022 13:35:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.06.2022 14:25:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -102,6 +102,42 @@
 <table class="dm">
 <tbody>
 <tr>
+<td class="amount">0,4 l</td>
+<td class="title">Gazpacho – studená zeleninová polévka s bazalkou ricottou a krutony 1a,3,7,9</td>
+<td class="pricem">79 Kč</td>
+</tr>
+<tr>
+<td class="amount">100 g</td>
+<td class="title">Grilovaný krevetový špíz s variací trhaných salátů, cherry rajčaty, mrkví,
+opečeným citronem a bagetou 1a,3,4,7,12</td>
+<td class="pricem">189 Kč</td>
+</tr>
+<tr>
+<td class="amount">300 g</td>
+<td class="title">Vepřová kotleta Tomahawk s omáčkou chimichirri, grilovanou kukuřicí
+a pečenou bramborou s česnekovým zákysem 1a,7,12</td>
+<td class="pricem">285 Kč</td>
+</tr>
+<tr>
+<td class="amount">400 g</td>
+<td class="title">Panzanella s mozzarellou - salát z čerstvé zeleniny, řapíkatého celeru, bazalky a mozzarelly
+s olivovým olejem extra virgin 1ab,7,9,12</td>
+<td class="pricem">195 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Grilovaný ananas s limetkovým sorbetem a slanou karamelovou omáčkou 7</td>
+<td class="pricem">99 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
 <td class="title">Gin Tonic Okurkový<br/>
 gin / tonic / čerstvá okurka / led</td>
 <td class="pricem">109 Kč</td>
@@ -128,11 +164,6 @@ pomerančový gin / tonic / pomeranč / led</td>
 </tr>
 </tbody>
 </table>
-</td>
-</tr>
-<tr>
-<td>
-<table class="dm"><tr><td class="amount">0,33l</td><td class="title">Dršťková polévka z hlívy ústřičné 1a</td><td class="pricem">43 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Gratinovaný kuřecí steak sýrovou krustou s lyonskými brambory a trhanými saláty 1a,3,7,10</td><td class="pricem">155 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Špikovaná hovězí pečeně po cikánsku s rajčaty a paprikami s jasmínovou rýží 1a</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety pomodoro s pancettou, sýrem Forte Classico a rukolovými listy 1a,3,7</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
